--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: rgba(233, 237, 240, 0.952);
+  background-color: cadetblue);
   font-family: "Open Sans", sans-serif;
   display: flex;
   align-items: center;
@@ -82,7 +82,7 @@ body {
 
 .container {
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 25px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
 }
